tests/baselines/reference/functionWithSameNameAsField.errors.txt
tests/cases/compiler/functionWithSameNameAsField.ts(2,12): error TS2300: Duplicate identifier 'total'.
tests/cases/compiler/functionWithSameNameAsField.ts(3,5): error TS2300: Duplicate identifier 'total'.


==== tests/cases/compiler/functionWithSameNameAsField.ts (2 errors) ====
    class TestProgressBar {
        public total: number;
               ~~~~~
!!! error TS2300: Duplicate identifier 'total'.
        public total(total: number) {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            this.total = total;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
            return this;
    ~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2300: Duplicate identifier 'total'.
    }
    